[package]
name = "nex-ballast"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26.2", default-features = false, features = ["default_fonts", "glow"] }
env_logger = { version = "0.11.5", default-features = false }
eyre = "0.6.12"
log = { version = "0.4.22", default-features = false }
oneshot = { version = "0.1.8", default_features=false, features = ["std"] }
