[package]
name = "nex-ballast"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { version = "2.3.1", default_features=false }
async-net = { version = "2.0.0", default-features=false }
eframe = { version = "0.26.2", default-features = false, features = ["default_fonts", "glow"] }
env_logger = { version = "0.11.5", default-features = false }
eyre = "0.6.12"
futures-lite = { version = "2.3.0", default-features=false }
log = { version = "0.4.22", default-features = false }
oneshot = { version = "0.1.8", default-features=false }
url = { version = "2.5.2", default-features = false }
